spacing fix

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ color: orange;
     }
 
     img {
-      padding-top: 5%;
+      padding-top: 10px;
     }
 
     .popup .popuptext {
